Fix overflow-x

--- a/html/assets/scss/_global.scss
+++ b/html/assets/scss/_global.scss
@@ -637,6 +637,7 @@ $foundation-colors: (
   }
 }
 
+html,
 body {
   overflow-x: hidden;
 }
